--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "eslint": "6.8.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.59.0",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "yarn-upgrade-all": "^0.7.1"
   },
   "private": true
 }
